--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -470,7 +470,9 @@ rule concat_genome_csvs:
         "( head -n 1 {input[0]} ; for f in {input}; do sed 1d $f; done ) > {output}"
 
 rule plot_ends:
-    output: expand("plots/ends-{end}-{plot}.pdf", end=ENDS, plot=PLOTS)
+    output:
+        expand("plots/ends-{end}-{plot}.pdf", end=ENDS, plot=PLOTS),
+        "plots/ends.pdf"
     input:
         csv="result.csv",
         config="config.yaml",
